<resources>
    <string name="app_name">KH-RECIPE</string>
    <string name="label_name">KH-RECIPE</string>
    <string name="search_hint">Search....</string>
    <string name="back_img">Back Button</string>
    <string name="add_new_review">Add New Review</string>
    <string name="rating">Rating</string>
    <string name="review">Review</string>
    <string name="review_here">Your Review Here.</string>
    <string name="on_submit_review">OnSubmitReview</string>
    <string name="submit">Submit</string>
    <string name="ingredient">Ingredient</string>
    <string name="ingredient_name">Ingredient Name</string>
    <string name="hint_sugar">e.g. Sugar</string>
    <string name="quantity">Quantity</string>
    <string name="quantity_num">e.g. 100 g</string>
    <string name="add">Add</string>
    <string name="instruction">Instruction</string>
    <string name="step">Step</string>
    <string name="eg_instruction">e.g. boil water</string>
    <string name="detail">Detail</string>
    <string name="hint_instruction">e.g. Start with a very large pot of water, about 6 quart per pound of pasta.</string>
    <string name="cancel">Cancel</string>
    <string name="camera">Add Image</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="cooking_time">Cooking Time</string>
    <string name="zero">0</string>
    <string name="mins">" mins"</string>
    <string name="serving">Servings</string>
    <string name="people">" people"</string>
    <string name="add_ingredient">Add Ingredient</string>
    <string name="add_instruction">Add Instruction</string>
    <string name="upload">Upload</string>
    <string name="change_password">Change Password</string>
    <string name="current_password">Current Password:</string>
    <string name="hint_current_pwd">Enter your current password</string>
    <string name="new_pwd">New Password: </string>
    <string name="hint_new_pwd">Enter your new password</string>
    <string name="confirm_new_pwd">Confirm New Password: </string>
    <string name="hint_confirm_new_pwd">Re-enter your new password</string>
    <string name="change">Change</string>
    <string name="change_username">Change Username</string>
    <string name="name">Name: </string>
    <string name="new_name">New Username: </string>
    <string name="hint_name">Enter your new username</string>
    <string name="update_profile">Update Profile</string>
    <string name="favorite">Favorite</string>
    <string name="home">Home</string>
    <string name="trending">Trending</string>
    <string name="recommend">Recommend</string>
    <string name="new_recipe">New Recipe</string>
    <string name="recipe_img">Recipe Image</string>
    <string name="delete_img">Delete Image</string>
    <string name="left">(</string>
    <string name="right">)</string>
    <string name="profile_img">Profile Image</string>
    <string name="login">Login</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="show_pwd">Show Password</string>
    <string name="forget_pwd">Forget Password?</string>
    <string name="skip_login">Skip Login</string>
    <string name="create_acc">Create Account</string>
    <string name="logout">Logout</string>
    <string name="my_acc_no_login">To Display Your Account Information</string>
    <string name="my_fav_no_login">To Save Your Favorite Recipe</string>
    <string name="my_recipe">My Recipe</string>
    <string name="add_recipe">Add New Recipe</string>
    <string name="my_recipe_no_login">To Upload Your Recipe</string>
    <string name="sign_up">Sign Up</string>
    <string name="hint_email">Email</string>
    <string name="sign_up_as">Sign Up As:</string>
    <string name="chef">Chef</string>
    <string name="student">Student</string>
    <string name="user_review">User Review"</string>
    <string name="reviews">" Reviews"</string>
    <string name="restore">Restore Search</string>
    <string name="search_by_ingredient">Search by Ingredient</string>
    <string name="ingredient_hint">Enter Up to 3 Ingredients:</string>
    <string name="your_ingredient">Your Ingredient</string>
    <string name="find_recipe">Find Recipe</string>
    <string name="num_one">1. </string>
    <string name="num_two">2. </string>
    <string name="num_three">3. </string>
    <string name="no_result">NO RESULTS</string>
    <string name="go_next">Go Next Button</string>
    <string name="recent_search">Recent Search</string>
    <string name="forget_your_password">Forget Your Password?</string>
    <string name="enter_your_email_address_and_we_will_send_you_a_link_to_reset_your_password">Enter your email address and we will send you a link to reset your password</string>
    <string name="send_email">send email</string>
    <string name="check_your_email">Check your email !</string>
    <string name="we_just_emailed_you_with_a_link_to_reset_your_password">We just emailed you with a link to reset your password.</string>
    <string name="go_back_to">Go Back To</string>
    <string name="edit_ingredient">Edit Ingredient</string>
    <string name="edit">Edit</string>
    <string name="todo">TODO</string>
    <string name="edit_instruction">Edit Instruction</string>
</resources>
