<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:gravity="start"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/ic_arrow_back_black_24dp"
            android:id="@+id/cancel_instruction"
            android:contentDescription="@string/back_img"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instruction"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginStart="15dp"/>

    </LinearLayout>
    <ScrollView android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/step"
            android:textColor="@color/black"
            android:textSize="24sp"/>
        <EditText
            android:id="@+id/etxt_instruction_step"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/rounded_corners_blue"
            android:hint="@string/eg_instruction"
            android:padding="15dp"
            android:autofillHints="@string/instruction"
            android:inputType="text"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:orientation="vertical"
        android:gravity="bottom">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:text="@string/detail"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/etxt_instruction_detail"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_weight="90"
            android:layout_marginTop="15dp"
            android:background="@drawable/rounded_corners_blue"
            android:hint="@string/hint_instruction"
            android:padding="15dp"
            android:autofillHints="@string/instruction"
            android:inputType="text"/>
        <Button
            android:id="@+id/btn_add_instruction"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="20dp"
            android:background="@color/header"
            android:padding="15dp"
            android:text="@string/add"
            android:textColor="#fff"
            android:textSize="18sp" />
    </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>