<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center_vertical"
        tools:ignore="UseCompoundDrawables">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/ic_arrow_back_black_24dp"
            android:layout_marginEnd="10dp"
            android:id="@+id/back_from_search_by_ingredient"
            android:contentDescription="@string/back_img" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/search_by_ingredient"
            android:gravity="center_vertical"
            android:textSize="20sp"
            android:textColor="@color/black"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ingredient_hint"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="15dp"
        android:textColor="@color/black"
        android:textSize="18sp"/>

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="15dp"
    android:layout_marginRight="15dp"
    android:layout_marginLeft="15dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/num_one"
        android:textSize="20sp"
        android:textColor="@color/black"/>
    <EditText
        android:id="@+id/etxt_first_ingredient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corners"
        android:hint="@string/your_ingredient"
        android:padding="15dp"
        android:layout_marginStart="10dp"
        android:inputType="text"
        android:importantForAutofill="no"/>

</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/num_two"
            android:textSize="20sp"
            android:textColor="@color/black"/>
        <EditText
            android:id="@+id/etxt_second_ingredient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corners"
            android:hint="@string/your_ingredient"
            android:padding="15dp"
            android:layout_marginStart="10dp"
            android:importantForAutofill="no"
            android:inputType="text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/num_three"
            android:textSize="20sp"
            android:textColor="@color/black"/>
        <EditText
            android:id="@+id/etxt_third_ingredient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corners"
            android:hint="@string/your_ingredient"
            android:padding="15dp"
            android:layout_marginStart="10dp"
            android:importantForAutofill="no"
            android:inputType="text" />

    </LinearLayout>


    <Button
        android:id="@+id/btn_find_recipe_by_ingredient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="16dp"
        android:background="@color/header"
        android:padding="15dp"
        android:text="@string/find_recipe"
        android:textColor="#fff"
        android:textSize="18sp" />


</LinearLayout>