<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:gravity="center_vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/forget_your_password"
            android:gravity="center_horizontal"
            android:textSize="22sp"
            android:textColor="@color/black"
            android:inputType="text"
            tools:ignore="TextViewEdits" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:layout_marginTop="15dp"
            android:textSize="18sp"
            android:text="@string/enter_your_email_address_and_we_will_send_you_a_link_to_reset_your_password"/>
    </LinearLayout>

    <EditText
        android:id="@+id/etxt_email_forget_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:autofillHints="@string/hint_email"
        android:background="@color/white"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        tools:ignore="TextFields" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <Button
            android:id="@+id/btn_forget_password_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/header"
            android:padding="15dp"
            android:text="@string/cancel"
            android:textColor="#fff"
            android:textSize="18sp"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/btn_forget_password_send_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/header"
            android:padding="15dp"
            android:text="@string/send_email"
            android:textColor="#fff"
            android:textSize="18sp"
            android:layout_marginStart="50dp"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>
</LinearLayout>